Добавлен копмоновщик для мирных жителей

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(game_tp)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(game_tp main.cpp Soldier.h Peaceful.h HumanFactory.cpp HumanFactory.h UfosFactory.cpp UfosFactory.h Wizard.h HumanPeaceful.cpp HumanPeaceful.h HumanSoldier.cpp HumanSoldier.h HumanWizard.cpp HumanWizard.h UfosPeaceful.cpp UfosPeaceful.h UfosSoldier.cpp UfosSoldier.h UfosWizard.cpp UfosWizard.h Unit.cpp Unit.h Player.cpp Player.h Factory.cpp Factory.h Population.cpp Population.h)
+add_executable(game_tp main.cpp Soldier.h Peaceful.h HumanFactory.cpp HumanFactory.h UfosFactory.cpp UfosFactory.h Wizard.h HumanPeaceful.cpp HumanPeaceful.h HumanSoldier.cpp HumanSoldier.h HumanWizard.cpp HumanWizard.h UfosPeaceful.cpp UfosPeaceful.h UfosSoldier.cpp UfosSoldier.h UfosWizard.cpp UfosWizard.h Unit.cpp Unit.h Factory.cpp Factory.h Population.cpp Population.h Army.cpp Army.h Player.cpp Player.h)
